--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <title>จังหวัดอุบลราชธานี</title>
   </head>
 <body>
+  <body style="background-color: black;">
   <h1>จังหวัดอุบลราชธานี</h1>
+  <h2>ที่ตั้ง</h2>
+  <p>อุบลราชธานี เป็นจังหวัดขนาดใหญ่ในภาคตะวันออกเฉียงเหนือตอนล่างซึ่งตั้งอยู่ทางตะวันออกสุดของภาคตะวันออกเฉียงเหนือและของประเทศไทย ทั้งยังเป็นตำบลที่ตั้งของเส้นเวลาหลักของประเทศ ที่เส้นแวง 105 องศาตะวันออก โดยเป็นจังหวัดแรกที่ได้เห็นดวงอาทิตย์ก่อนพื้นที่อื่น ๆ ทั่วประเทศ</p>
 </body>
 </html>
