--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <h1>จังหวัดอุบลราชธานี</h1>
   <h2>ที่ตั้ง</h2>
   <p>อุบลราชธานี เป็นจังหวัดขนาดใหญ่ในภาคตะวันออกเฉียงเหนือตอนล่างซึ่งตั้งอยู่ทางตะวันออกสุดของภาคตะวันออกเฉียงเหนือและของประเทศไทย ทั้งยังเป็นตำบลที่ตั้งของเส้นเวลาหลักของประเทศ ที่เส้นแวง 105 องศาตะวันออก โดยเป็นจังหวัดแรกที่ได้เห็นดวงอาทิตย์ก่อนพื้นที่อื่น ๆ ทั่วประเทศ</p>
-    ทิศเหนือ ติดต่อกับจังหวัดอำนาจเจริญและประเทศลาว
+    <h2>อาณาเขต</h2>
+    <p>ทิศเหนือ ติดต่อกับจังหวัดอำนาจเจริญและประเทศลาว
 ทิศตะวันออก ติดต่อกับแขวงจำปาศักดิ์ (ประเทศลาว) โดยพรมแดนบางช่วงใช้แม่น้ำโขงเป็นตัวกำหนด
 ทิศใต้ ติดต่อกับจังหวัดพระวิหาร (ประเทศกัมพูชา)
 ทิศตะวันตก ติดต่อกับจังหวัดศรีสะเกษและจังหวัดยโสธร
 แนวพรมแดนติดต่อกับประเทศลาวและกัมพูชา รวมความยาวประมาณ 428 กิโลเมตร
 ติดต่อกับประเทศลาว 361 กิโลเมตร (จากอำเภอเขมราฐถึงอำเภอน้ำยืน ติดต่อกับแขวงสุวรรณเขต แขวงสาละวัน และแขวงจำปาศักดิ์)
-ติดต่อกับประเทศกัมพูชา 67 กิโลเมตร (อำเภอน้ำยืน ติดต่อกับจังหวัดพระวิหาร ประเทศกัมพูชา)
+ติดต่อกับประเทศกัมพูชา 67 กิโลเมตร (อำเภอน้ำยืน ติดต่อกับจังหวัดพระวิหาร ประเทศกัมพูชา)</p>
 </body>
 </html>
