--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <title>จังหวัดอุบลราชธานี</title>
+  <link rel="website icon" type=png
+    href="images/Capture.png"
   </head>
 <body>
   <h1>จังหวัดอุบลราชธานี</h1>
