--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="style.css">
   <title>จังหวัดอุบลราชธานี</title>
   <link rel="website icon" type=png
-    href="images/Capture.png"
+    href="images/Capture.png">
   </head>
 <body>
   <h1>จังหวัดอุบลราชธานี</h1>
