--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <p>อุบลราชธานี เป็นจังหวัดขนาดใหญ่ในภาคตะวันออกเฉียงเหนือตอนล่างซึ่งตั้งอยู่ทางตะวันออกสุดของภาคตะวันออกเฉียงเหนือและของประเทศไทย ทั้งยังเป็นตำบลที่ตั้งของเส้นเวลาหลักของประเทศ ที่เส้นแวง 105 องศาตะวันออก โดยเป็นจังหวัดแรกที่ได้เห็นดวงอาทิตย์ก่อนพื้นที่อื่น ๆ ทั่วประเทศ</p>
     <h2>อาณาเขต</h2>
     <p>ทิศเหนือ ติดต่อกับจังหวัดอำนาจเจริญและประเทศลาว</p>
-<p>ทิศตะวันออก ติดต่อกับแขวงจำปาศักดิ์ (ประเทศลาว) โดยพรมแดนบางช่วงใช้แม่น้ำโขงเป็นตัวกำหนด</p>
-<p>ทิศใต้ ติดต่อกับจังหวัดพระวิหาร (ประเทศกัมพูชา)</p>
-<p>ทิศตะวันตก ติดต่อกับจังหวัดศรีสะเกษและจังหวัดยโสธร</p>
-<p>แนวพรมแดนติดต่อกับประเทศลาวและกัมพูชา รวมความยาวประมาณ 428 กิโลเมตร</p>
-<p>ติดต่อกับประเทศลาว 361 กิโลเมตร (จากอำเภอเขมราฐถึงอำเภอน้ำยืน ติดต่อกับแขวงสุวรรณเขต แขวงสาละวัน และแขวงจำปาศักดิ์)</p>
-<p>ติดต่อกับประเทศกัมพูชา 67 กิโลเมตร (อำเภอน้ำยืน ติดต่อกับจังหวัดพระวิหาร ประเทศกัมพูชา)</p>
+<p>• ทิศตะวันออก ติดต่อกับแขวงจำปาศักดิ์ (ประเทศลาว) โดยพรมแดนบางช่วงใช้แม่น้ำโขงเป็นตัวกำหนด</p>
+<p>• ทิศใต้ ติดต่อกับจังหวัดพระวิหาร (ประเทศกัมพูชา)</p>
+<p>• ทิศตะวันตก ติดต่อกับจังหวัดศรีสะเกษและจังหวัดยโสธร</p>
+<p>• แนวพรมแดนติดต่อกับประเทศลาวและกัมพูชา รวมความยาวประมาณ 428 กิโลเมตร</p>
+<p>• ติดต่อกับประเทศลาว 361 กิโลเมตร (จากอำเภอเขมราฐถึงอำเภอน้ำยืน ติดต่อกับแขวงสุวรรณเขต แขวงสาละวัน และแขวงจำปาศักดิ์)</p>
+<p>• ติดต่อกับประเทศกัมพูชา 67 กิโลเมตร (อำเภอน้ำยืน ติดต่อกับจังหวัดพระวิหาร ประเทศกัมพูชา)</p>
 </body>
 </html>
